tests/models/enum/named/unit/fail/ge.stderr
error: Support condition is alias, default
 --> tests/models/enum/named/unit/fail/ge.rs:6:9
  |
6 |         value: ()
  |         ^^^^^
